# eventic

./: .gitignore  README.md  dbos-config.yaml  pyproject.toml
src/eventic/: __init__.py  bootstrap.py  events.py  main.py  runtime.py
src/eventic/app/: main.py
src/eventic/core/: __init__.py  properties.py  record.py
src/eventic/persistence/: __init__.py  models.py  store.py
src/eventic/queues/: __init__.py  dispatcher.py
src/examples/: demo.py  verify_eventic.py
